Bug 548734.  Get rid of the footgun ui.use_native_popup_windows preference.  r=roc,khuey